# media-metadata-intelligence

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
docs/: architecture.md  demo_walkthrough.md  model_card.md  portfolio_summary.md  sample_outputs.md
docs/screenshots/: README.md
reports/: baseline_metrics.json  baseline_per_tag_report.csv  baseline_thresholds.csv
scripts/: build_search_index.py  intelligence_report.py  predict_tags.py  prepare_data.py  run_api.py  run_eda.py  run_streamlit.py  search_similar.py  train_baseline.py
src/metadata_intelligence/: __init__.py  artifacts.py  config.py  data_loader.py  demo.py  eda.py  evaluation.py  labels.py  modeling.py  preprocessing.py  semantic_search.py
src/metadata_intelligence/api/: __init__.py  app.py  dependencies.py  schemas.py
tests/: test_api.py  test_data_loader.py  test_demo.py  test_evaluation.py  test_modeling.py  test_preprocessing.py  test_semantic_search.py
